Revision history for Perl module {{$dist->name}}

{{$NEXT}}
  - Silence smartmatch warnings

0.007     2012-11-25
  - minor POD fix
  - Test suite updates

0.006     2011-04-22
  - Packaging changes only

0.005     2010-11-28
  - Use Perl_5 license: your choice of GPL or Artistic

0.004     2010-11-28
  - Use String::Trim to provide a trim function

0.003     2010-10-31
  - Require Perl 5.10.1 - RT#62574: Fails on perl 5.10.0

0.002     2010-10-25
  - Updated documentation
  - Specified encoding in POD

0.001     2010-10-24
  - Initial version